--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.google.android.material:material:1.0.0-alpha1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2' //retrofit2
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
 }
