--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/booking_book_app_icon"
+        android:icon="@mipmap/ic_booking_book"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/booking_book_app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".MainActivity">
